<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.smp.masterswitchpreference.MasterSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_baseline_cake_24"
        app:key="@string/some_key"
        app:summary="Everything hides"
        app:title="@string/title_master_switch"
        app:ms_switchLayout="layout/m3_switch"
        app:ms_switchOffText="Off"
        app:ms_switchOnText="On"
        app:ms_switchOffExplanationText="@string/off_explanation"
        app:ms_explanationIcon="drawable/ic_baseline_cake_24"
        app:ms_includedPrefScreen="xml/settings_master_switch_1" />

    <com.smp.masterswitchpreference.MasterSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_baseline_cake_24"
        app:key="@string/some_other_key"
        app:summary="Some of them don't hide"
        app:title="@string/title_master_switch"
        app:ms_switchLayout="layout/m3_switch"
        app:ms_switchOffText="Off"
        app:ms_switchOnText="On"
        app:ms_switchOffBackgroundColor="?colorSurfaceVariant"
        app:ms_switchOnBackgroundColor="?colorPrimaryContainer"
        app:ms_switchOnTextColor="?colorOnPrimaryContainer"
        app:ms_switchOffTextColor="?colorOnSurfaceVariant"
        app:ms_switchOffExplanationText="@string/off_explanation"
        app:ms_explanationIcon="drawable/ic_baseline_cake_24"
        app:ms_explanationIconTintColor="?colorOnSurfaceVariant"
        app:ms_includedPrefScreen="xml/settings_master_switch_1"
        app:ms_excludedPrefScreen="xml/settings_master_switch_2"/>

    <com.smp.masterswitchpreference.MasterSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_baseline_cake_24"
        app:key="@string/some_individual_key"
        app:title="Individual on/off switch"
        app:ms_switchLayout="layout/m3_switch"
        app:ms_switchOffText="Off"
        app:ms_switchOnText="On"
        app:ms_switchOffBackgroundColor="?colorSurfaceVariant"
        app:ms_switchOnBackgroundColor="?colorPrimaryContainer"
        app:ms_switchOnTextColor="?colorOnPrimaryContainer"
        app:ms_switchOffTextColor="?colorOnSurfaceVariant"
        app:ms_switchOffExplanationText="@string/off_explanation"
        app:ms_switchOnExplanationText="@string/on_explanation"
        app:ms_explanationIcon="drawable/ic_baseline_cake_24"
        app:ms_hideExplanation="false"
        app:ms_showStatusInSummary="true"/>

    <com.smp.masterswitchpreference.MasterSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_baseline_cake_24"
        app:key="@string/some_special_key"
        app:summary="Extend the fragment"
        app:title="@string/title_master_switch"
        app:fragment="com.smp.masterswitchpreference.sampleapp.ExtendMasterSwitchPreferenceFragment"
        app:ms_switchLayout="layout/m3_switch"
        app:ms_switchOffText="Off"
        app:ms_switchOnText="On"
        app:ms_switchOffBackgroundColor="?colorSurfaceVariant"
        app:ms_switchOnBackgroundColor="?colorPrimaryContainer"
        app:ms_switchOnTextColor="?colorOnPrimaryContainer"
        app:ms_switchOffTextColor="?colorOnSurfaceVariant"
        app:ms_switchOffExplanationText="@string/off_explanation"
        app:ms_explanationIcon="drawable/ic_baseline_cake_24"
        app:ms_includedPrefScreen="xml/settings_master_switch_1" />
</PreferenceScreen>